--- a/_layouts/newhome.html
+++ b/_layouts/newhome.html
@@ -14,8 +14,8 @@
 
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/screen.css">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/sitelogo.png" sizes="32x32">
-		<link href="https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Fira+Mono" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300" rel="stylesheet">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
 			<script>
