--- a/assets/css/terminal.css
+++ b/assets/css/terminal.css
@@ -70,8 +70,8 @@
 #screen .command {
     margin: 0;
     color: #D76D77;
-    font-family: monospace;
-    font-size: 15px;
+    font-family: 'Fira Mono', Consolas, Menlo, Monaco, 'Courier New', Courier, monospace;
+    font-size: 13px;
     text-align: left;
     position: static;
     padding-left: 30px
@@ -84,8 +84,8 @@
 #screen .response {
     margin: 0 0 25px 0;
     color: #1a1e24;
-    font-family: monospace;
-    font-size: 15px;
+    font-family: 'Fira Mono', Consolas, Menlo, Monaco, 'Courier New', Courier, monospace;
+    font-size: 13px;
     text-align: left;
     position: static;
     padding-left: 30px;
